Fix pre wrapping
http://stackoverflow.com/questions/10374171/how-to-make-twitter-bootstraps-pre-blocks-scroll-horizontally

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -45,6 +45,11 @@ html {
   }
 }
 
+pre {
+  overflow: auto;
+  word-wrap: normal;
+  white-space: pre;
+}
 
 /*
  * Sidebar
